chore: Documentation of all functions within the handler has been completed
